Cluster/App mesh + Karpenter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skills
  labels:
    mesh: skills-app
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
